# string_bimap

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
bench/: fetch_openfigi_values.sh  pthash_bimap_bench.cpp  run_benchmark_matrix.sh  string_bimap_bench.cpp  summarize_benchmark_matrix.sh
bench/results-current/: summary.md
cmake/: string_bimapConfig.cmake.in
examples/: basic.cpp  pthash_bimap.cpp
include/string_bimap/: base_segment.hpp  delta_segment.hpp  packed_string_arena.hpp  pthash_bimap.hpp  serialization.hpp  string_bimap.hpp  tombstones.hpp  types.hpp
include/string_bimap/detail/: string_map.hpp
tests/: benchmark_smoke.cmake  common.hpp  core_test.cpp  fuzz_load.cpp  persistence_test.cpp  pthash_bimap_test.cpp  pthash_tool_test.cpp  query_test.cpp  smoke.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/subproject_consumer/: CMakeLists.txt
tools/: pthash_bimap_tool.cpp
vcpkg_ports/hat-trie/: portfile.cmake  vcpkg.json
vcpkg_ports/xcdat/: portfile.cmake  vcpkg.json
vcpkg_ports/xcdat/include/xcdat/: bc_vector_7.hpp  bc_vector_8.hpp  load_visitor.hpp  mmap_visitor.hpp  save_visitor.hpp  size_visitor.hpp
